--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@syncfusion/ej2-angular-charts": "^29.1.33",
+    "@syncfusion/ej2-charts": "^29.1.33",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.49.0",
     "ng-apexcharts": "1.7.6",
