--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@syncfusion/ej2-charts": "^29.1.33",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.49.0",
+    "chart.js": "^4.4.8",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ng-apexcharts": "1.7.6",
     "ngx-scrollbar": "^11.0.0",
     "rxjs": "~7.5.0",
@@ -40,6 +44,7 @@
     "@angular/cli": "~19.0.1",
     "@angular/compiler-cli": "^19.0.0",
     "@types/date-fns": "^2.6.0",
+    "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
