--- a/package.json
+++ b/package.json
@@ -26,16 +26,23 @@
     "@syncfusion/ej2-charts": "^29.1.33",
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.49.0",
+    "braces": "^3.0.3",
     "chart.js": "^4.4.8",
+    "echarts": "^5.6.0",
+    "fill-range": "^7.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "micromatch": "^4.0.8",
     "ng-apexcharts": "1.7.6",
+    "ngx-echarts": "^19.0.0",
     "ngx-scrollbar": "^11.0.0",
+    "piscina": "^4.9.2",
     "rxjs": "~7.5.0",
     "sass": "1.81.0",
     "spike": "file:",
     "sweetalert2": "^11.17.2",
+    "to-regex-range": "^5.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
